Add possibility to specify codegen to Gradle plugin, ref #15085
* add a parameter `codegenName` to the Gradle plugin that works
  in a similar way as the `generatorName` parameter
* when specified a class with the given name that implements
  `org.openapitools.codegen.Generator` is tried to be instantiated
  via SPI or if a FQCN is supplied this class (has to implement
  the Generator interface) is tried to be instantiated. This class
  is then subsequently used to generate code.
* if the parameter is not specified then
  `org.openapitools.codegen.DefaultGenerator` is used
* add a method `getName` to the Generator interface and to
  `DefaultGenerator`

--- a/modules/openapi-generator-gradle-plugin/README.adoc
+++ b/modules/openapi-generator-gradle-plugin/README.adoc
@@ -144,6 +144,11 @@ apply plugin: 'org.openapi.generator'
 |None
 |The name of the generator which will handle codegen.
 
+|codegenName
+|String
+|default
+|The name or FQDN of the codegen class used for loading the generator and base functionality. If not specified `DefaultGenerator` is used.
+
 |outputDir
 |String
 |None
